--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="ctr-estoque.css">
     <title>Controle de Estoque</title>
 </head>
 <body>
@@ -16,6 +17,8 @@
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
+        <a href="pagina-venda.html">Página de vendas</a>
+        <a href="pghistorico-vendas.html">Página Histórico de Vendas</a>
     </div>
 
     <h2>Controle de Estoque</h2>
