--- a/modulo1/html-sistema-loja/template-loja/index.html
+++ b/modulo1/html-sistema-loja/template-loja/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <link rel="stylesheet" href="style.css">
+    <title>J&M Calçados</title>
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ a <em>J&M Calçados</em>!</h1>
-        <p>Gente que ama sapatos!</p>
-    </div>
+    <header>
+        <div>
+            <h1>Bem-vind@ a <em>J&M Calçados</em>!</h1>
+            <p>Gente que ama sapatos!</p>
+        </div>
+    </header>
+    
 
     <div>
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
+        <a href="pagina-venda.html">Página de vendas</a>
+        <a href="pghistorico-vendas.html">Página Histórico de Vendas</a>
     </div>
 
     <div>
@@ -27,15 +33,18 @@
         </p>
     </div>
 
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
-
-        <div>
-            <img width="50px" src="img/facebook.png"alt="facebook"/>
-            <img width="50px" src="img/instagram.jpeg" alt="instagram"/>
-            <img width="50px" src="img/twitter.png" alt="twitter"/>
-            <img width="50px" src="img/whatssapp.png" alt="whatssapp">
+   
+    <footer>
+        <div class="paragrafo-footer">
+            <p>Siga-nos nas redes sociais!</p>      
         </div>
-    </div>
+
+        <div class="imagem-logos">
+            <img width="20px" src="img/facebook.png"alt="facebook"/>
+            <img width="20px" src="img/instagram.jpeg" alt="instagram"/>
+            <img width="20px" src="img/twitter.png" alt="twitter"/>
+            <img width="20px" src="img/whatssapp.png" alt="whatssapp">
+        </div>
+    </footer>
 </body>
 </html>
