--- a/modulo1/html-sistema-loja/template-loja/index.html
+++ b/modulo1/html-sistema-loja/template-loja/index.html
@@ -35,7 +35,7 @@
 
    
     <footer>
-        <div class="paragrafo-footer">
+        <div class="paragrafo1">
             <p>Siga-nos nas redes sociais!</p>      
         </div>
 
