Estilização da pagina

--- a/modulo1/projeto-black-jack/Blackjack/index.html
+++ b/modulo1/projeto-black-jack/Blackjack/index.html
@@ -7,7 +7,27 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h2>ABRA O CONSOLE ---></h2>
+    <main>
+      <h2>ABRA O CONSOLE ---></h2>
+      <h1>Projeto Black Jack</h1>
+      <p>Blackjack ou Vinte-e-um é um jogo praticado com cartas em casinos e que pode ser jogado com 1 a 8 baralhos de 52 cartas, <br>
+        em que o objetivo é ter mais pontos do que o adversário, mas sem ultrapassar os 21 (caso em que se perde). O dealer só pode <br>
+        pedir até um máximo de 5 cartas ou até chegar ao número 17.
+
+      <ul id="list">
+        <p>Tecnologias Utilizadas</p>
+        <li>Html</li>
+        <li>Css</li>
+        <li>javascript</li>
+      </ul>
+
+    </main>
+    
+
+
+
+
+
     <script type="application/javascript" src="naoMexer.js"></script>
     <script defer type="application/javascript" src="nossoJogo.js"></script>
     <script defer type="application/javascript" src="desafio.js"></script>
