--- a/modulo1/css-labetube/index.html
+++ b/modulo1/css-labetube/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>FutureTube</h1>
-        <input type="text" placeholder="Buscar... " style="border-radius:5px;">   
+        <input id="buscar" type="text" placeholder="Buscar... " style="border-radius:5px;">   
     </header>
 
     <main>
