--- a/modulo1/css-labetube/index.html
+++ b/modulo1/css-labetube/index.html
@@ -67,7 +67,7 @@
 
     <footer>
         <p>
-           Oi! Eu moro no Footer!
+           Criado por @CristianoSilva
         </p>
     </footer>
     
