Tags alt para melhor acessibilidade

--- a/modulo1/css-labetube/videos7.html
+++ b/modulo1/css-labetube/videos7.html
@@ -16,7 +16,7 @@
 
     
     <section>
-        <video class="video-aleatorio" src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" preload="metadata" autoplay muted controls loop buffered played>
+        <video class="video-aleatorio" src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4" preload="metadata" autoplay muted controls loop buffered played alt="video">
         </video>
         <h3 class="play-video">Media 7</h3>
     </section>
